2016-01-20         Arnold D. Robbins     <arnold@skeeve.com>

	* regex_internal.h [attribute_hidden]: Remove definition.
	* regcomp.c [attribute_hidden]: Remove uses. Not needed since
	the variables are static. Thanks to Paul Eggert for pointing
	this out.

2016-01-18         Paul Eggert  <eggert@cs.ucla.edu>

	Diagnose ERE '()|\1'
	Problem reported by Hanno Boeck in: http://bugs.gnu.org/21513

	* lib/regcomp.c (parse_reg_exp): While parsing alternatives, keep
	track of the set of previously-completed subexpressions available
	before the first alternative, and restore this set just before
	parsing each subsequent alternative.  This lets us diagnose the
	invalid back-reference in the ERE '()|\1'.

	Unrelated:  General minor cleanups (spelling, code) from Gnulib:

	* regex.h, regex_internal.c, regex_internal.h, regexec.c: Minor
	cleanups.

2016-01-14         Arnold D. Robbins     <arnold@skeeve.com>

	* eval.c (r_get_lhs): If original array was Node_var_new,
	assign value that is dupnode of Nnull_string and not
	Nnull_string directly. Fixes core dump reported by
	ruyk <Lonely.ruyk@mail.ru>.

	Unrelated:

	* ChangeLog: Cleanup spurious extra whitespace.

2016-01-02         Arnold D. Robbins     <arnold@skeeve.com>

	* dfa.c (add_utf8_anychar): Minor change in declaration of
	utf8_classes to keep Tiny CC happy.  Also syncs with grep.
	* dfa.h: Sync with grep (update copyright year).

2015-12-27         Arnold D. Robbins     <arnold@skeeve.com>

	* awkgram.y (mk_condition): Revise to correctly handle
	empty else part for pretty printing. Bug report by
	ziyunfei <446240525@qq.com>.

2015-12-16         Arnold D. Robbins     <arnold@skeeve.com>

	* io.c (two_way_open): Remove unneeded close of slave in the
	parent.

2015-12-16         Arnold D. Robbins     <arnold@skeeve.com>

	* profile.c (pp_number): Move count into ifdef for MPFR. Avoids
	an unused variable warning if not compiling for MPFR.

	Unrelated:

	* io.c (two_way_open): If using a pty instead of pipes, open the